MCKIN-9854 Fixed tooltips on IE and Edge (#2607)
* MCKIN-9854 Fixed tooltips on IE and Edge

* removed wrong code

--- a/static_v2/scss/_biapp.scss
+++ b/static_v2/scss/_biapp.scss
@@ -11,6 +11,7 @@
 // Header
 .appHeader {
   .logo {
+    @include padding-left(15px);
     .all-logos {
       @include float(left);
     }
@@ -418,6 +419,11 @@ footer {
 // CSS specific styles
 body.rtl {
   text-align: right;
+  .my-courses{
+    .bookmark{
+      background-position-x: left;
+    }
+  }
   .bookmark {
     @include flip-x-axis;
   }
